Fix responsiveness on screens screens smaller than 450px portrait. Fix style discrepencies for text between multiple components. Fix header nav display issue on smaller screens. Change header nav background transparency color on Photos component. Fix header nav height reducing on page shrink.

--- a/src/components/album/album-styles.scss
+++ b/src/components/album/album-styles.scss
@@ -15,10 +15,19 @@
 		padding: 5% 0;
 		margin: 0 auto;
 		line-height: 1.5em;
+
+		@media screen and (max-width: 926px) {
+			font-size: 1em;
+			padding: 5%;
+		}
 	}
 
 	@media only screen and (max-width : 926px) {
 		margin: 0;
+
+		 div {
+			margin-bottom: 0;
+		}
 	}
 
 	img:not([src]) {
